<resources>
    <string name="test1">100</string>
    <string name="app_name">图片打tag</string>
    <string name="main_title_name">图片打tag</string>
    <string name="poi_search_city_name">附近金矿</string>
    <string name="poi_task_preview">金矿预览</string>
    <string name="street_task_preview">街边预览</string>
    <string name="poi_right_wrong_page">拍拍你的金矿</string>
    <string name="poi_submit_photo_page">提交金矿信息</string>
    <string name="poi_submit_streetshopfront_photo_page">提交街边门脸信息</string>
    <string name="poi_check_poibinding_failed">金矿绑定失败</string>
    <string name="poi_get_nearby_task">正在加载&#8230;</string>
    <string name="poi_loading_goldmine">努力探矿中&#8230;</string>
    <string name="poi_loading_no_data">诶，啥都没有(⊙o⊙)</string>
    <string name="search_poi_street_page">找街边</string>
    <string name="add_poi_street_page">新增街边</string>
    <string name="poi_street_page">街边POI</string>
    <string name="mall_unsubmit">待提交</string>
    <string name="mall_submited">已提交</string>
    <string name="mall_submit_no_pic">没有已编辑的照片</string>
    <string name="outof_date">已过期</string>
    <string name="poi_transit_shopfront_page">拍一拍门脸</string>
    <string name="poi_transit_teladd_page">拍一拍电话和地址</string>
    <string name="mall_title_name">您附近的商厦</string>
    <string name="mall_photograph_title_name">进入商厦</string>
    <string name="mall_photo_help_title_name">帮助</string>
    <string name="mall_inner_shop_title_name">已拍摄商铺</string>
    <string name="mall_photograph_takephoto_fail">照片获取失败</string>
    <string name="mall_photograph_takephoto_retake">定位成功后，才能拍门脸哦</string>
    <string name="mall_to_shop_photo">开始拍商铺</string>
    <string name="mall_bind">已绑定</string>
    <string name="mall_bind_remind">请不要选择以下被拍摄过的商铺，不然没有返现哦！</string>
    <string name="mall_bind_remind_noshop">还没有人在此商厦挖宝，恭喜您承包了整座商厦的店铺!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit">编辑</string>
    <string name="done">完成</string>
    <string name="help">帮助</string>
    <string name="close">关闭</string>
    <string name="other">更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="poi_no_netwrok">无网络,请检查网络</string>
    <string name="poi_no_server">网络忒差了…</string>
    <string name="poi_network_failure">网络不给力</string>
    <string name="poi_request_failed">获取数据失败，请重试</string>
    <string name="poi_request_failed_desc">探矿失败，请检查网络</string>
    <string name="poi_request_loading">加载任务中&#8230;</string>
    <string name="search_none_tip">输入不能为空</string>
    <string name="search_none_face_tip">不能输入表情</string>
    <string name="cpmytaskactivity_title">全部金矿</string>
    <string name="cpmytaskactivity_del">正在删除金矿</string>
    <string name="cpmystreetactivity_title">找街边</string>
    <string name="my_mall_activity_title">拍商厦</string>
    <string name="cpphotographactivity_location_failed">定位失败</string>
    <string name="indoor_task_locate_failed_tip">定位失败，请放入手机卡或者连接wifi后重试</string>
    <string name="cpphotographactivity_save">正在保存&#8230;</string>
    <string name="cpphotographactivity_submit">正在提交&#8230;</string>
    <string name="cpphotographactivity_shop_save_success">商厦保存成功</string>
    <string name="cpstreetphotographactivity_shop_save_success">街边保存成功</string>
    <string name="cstreetpphotographactivity_street_save_success">正在上传街边</string>
    <string name="cpphotographactivity_updata_photo">正在上传金矿</string>
    <string name="cpphotographactivity_location">正在定位</string>
    <string name="picture_taking">处理中&#8230;</string>
    <string name="cpphotographactivity_save_success">金矿存储成功</string>
    <string name="cpphotographactivity_save_failed">金矿存储失败</string>
    <string name="cpphotographactivity_update_success">金矿提交成功</string>
    <string name="cpphotographactivity_update_failed">金矿提交失败</string>
    <string name="cpphotographactivity_update_no">图片不存在，请重新拍照</string>
    <string name="cpphotographactivity_update_timeout">您有过期金矿</string>
    <string name="cpphotographactivity_photo_num">最多添加三张照片</string>
    <string name="cpphotographactivity_photo_numtwo">最多添加两张照片</string>
    <string name="cpphotographactivity_photo_wrong_num">判错最少拍三张</string>
    <string name="cpphotographactivity_photo_one_num">最少保留一张照片</string>
    <string name="cpstreetphotographactivity_photo_one_num">最后一张照片不可删除！</string>
    <string name="cpphotographactivity_has_delete">已删除</string>
    <string name="cpstreetphotographactivity_firstphoto_one_num">第一张照片不可删除！</string>
    <string name="cpphotographactivity_too_far">走远就拍不了啦！</string>
    <string name="cpphotographactivity_modify_too_far">走远就拍不了啦！</string>
    <string name="cpphotographactivity_right_note">注：最少拍摄一张，最多拍摄三张</string>
    <string name="cpphotographactivity_wrong_note">注：最少拍摄三张</string>
    <string name="cpphotographactivity_simulation_location">检测到设备开启[允许模拟位置]，请关闭后重新拍照定位。</string>
    <string name="cpphotographactivity_pre_note">请对</string>
    <string name="cpphotographactivity_post_note">进行拍照</string>
    <string name="cpphotographactivity_pre_finish_note">已对</string>
    <string name="cpphotographactivity_post_finish_note">完成拍照</string>
    <string name="cpstreetphotographactivity_tracepoint">请检查描点，选分类操作是否已完成</string>
    <string name="choosecatogrytoast">请先拍金矿门脸</string>
    <string name="mall_bind_num_remaind">同时只能承包3座大厦哦</string>
    <string name="cppoidetailsactivity_get">正在加载</string>
    <string name="submitscreen_unselected_data">未选中金矿</string>
    <string name="submitscreen_unsubmit_data">没有待提金矿</string>
    <string name="submitscreen_submit_date">提交时间:&#160;</string>
    <string name="submitscreen_out_date">过期时间:&#160;</string>
    <string name="submitscreen_del">您确定要删除吗？</string>
    <string name="submitscreen_del_message">温馨提示：被删除的POI金矿可重新拍摄提交</string>
    <string name="submitscreen_del_all">确认提交全部金矿？</string>
    <string name="submitscreen_ok">确定</string>
    <string name="submitscreen_cancel">取消</string>
    <string name="ignore">忽略</string>
    <string name="submitscreen_save">保存</string>
    <string name="submitscreen_abandon">放弃</string>
    <string name="cpmainactivity_location_failed">定位失败，请稍候再试</string>
    <string name="cpmainactivity_gps">GPS开关</string>
    <string name="cpmainactivity_gps_message">请在设置中打开GPS</string>
    <string name="cpcameraactivity_oritationerror_message">拍摄方向角异常，请回地图查看</string>
    <string name="cpcameraactivity_densityerror_message">拍摄密度不合格，请回地图查看</string>
    <string name="cpmainactivity_device_id_single_message">无法获取系统设备信息，请打开权限后再使用高德淘金。</string>
    <string name="cpmainactivity_device_id_double_message">请在使用高德淘金时，至少打开一次WLAN</string>
    <string name="setting_tip">设置</string>
    <string name="cpmainactivity_plot_message">请在精度圈内操作</string>
    <string name="cpmainactivity_plot_me">我在这里</string>
    <string name="cpmainactivity_prompt">提示</string>
    <string name="cpmainactivity_simulation_location">检测到设备开启[允许模拟位置]。必须关闭才能继续使用高德淘金，现在去设置吗？</string>
    <string name="always_finish_activities_tip">请关闭手机设置中开发者选项里的[不保留活动]，否则将影响程序正常运行</string>
    <string name="cpphototransitactivity_message_num">最多输入48个字</string>
    <string name="cpphototransitactivity_sdcard">请插入SD卡后重试</string>
    <string name="checkpoi_client_timeout">网络超时，请重试</string>
    <string name="complete_photograph">完成拍摄</string>
    <string name="find_shop_photographed">查看商厦已拍POI</string>
    <string name="edit_photo">编辑照片</string>
    <string name="added_toast">金矿审核中 无法开采！</string>
    <string name="added_tip">审核中</string>
    <string name="added_charger_tip">特指汽车充电站，自行车充电站无效</string>
    <string name="check_config">配置查询</string>
    <string name="check_config_cb_tip">允许模拟拍照</string>
    <string name="simulate_cb">模拟拍照</string>
    <string name="simulate_count">每条路点数</string>
    <string name="simulate_ori">方向角(空=随机)</string>
    <string name="shooted">已拍</string>
    <string name="about_title">关于</string>
    <string name="app_version">V1.0.0</string>
    <string name="company_name">高德软件有限公司</string>
    <string name="check_update">检查更新</string>
    <string name="use_agree">协议条款</string>
    <string name="use_share">推荐给朋友</string>
    <string name="myprofle_level">L</string>
    <string name="myprofle_exp_tip">经验值:</string>
    <string name="autonavi_mapservie">高德地图服务条款</string>
    <string name="autonavi_mapregist">高德用户注册协议</string>
    <string name="taobao_servie">淘宝用户授权协议</string>
    <string name="shop_photograph_help">拍商厦帮助</string>
    <string name="suggest">参与用户体验改善计划，帮助改善高德淘金产品。</string>
    <string name="security_selected">我已经知道了，不会拍摄涉密点了</string>
    <string name="feedback">联系我们</string>
    <string name="feedback_content">您有任何问题，都可以发邮件给:</string>
    <string name="feedback_email">gxd.kefu@alibaba-inc.com</string>
    <string name="share_content">扫二维码，安装应用</string>
    <string name="save_picture">保存到相册</string>
    <string name="hasNew">已检测到更新</string>
    <string name="beNew">已是最新版本</string>
    <string name="about_bottom">CopyRight©2002—2016 高德软件版权所有</string>
    <string name="pdoor_pic">门脸</string>
    <string name="pinvalid">无效</string>
    <string name="pvalid">有效</string>
    <string name="preason_marker">、</string>
    <string name="pic_is_not_clear">照片看不清</string>
    <string name="pphone">电话</string>
    <string name="paddr">地址</string>
    <string name="pcategory">分类</string>
    <string name="pcoordinate">坐标</string>
    <string name="pcomment">评论</string>
    <string name="pbankname">银行名称</string>
    <string name="pinputbank">录入银行名称</string>
    <string name="park_entrance">入口</string>
    <string name="park_fee">收费信息牌</string>
    <string name="pbusinesshours">营业时间</string>
    <string name="pinputbusinesshours">录入营业时间</string>
    <string name="pdelete">验证不存在</string>
    <string name="pnav">景区导览图</string>
    <string name="pbank">银行</string>
    <string name="poil">加油站</string>
    <string name="pwatery">水牌</string>
    <string name="poneoil">油号#</string>
    <string name="task_add">新增</string>
    <string name="task_delete">删除</string>
    <string name="preview_verify">修改</string>
    <string name="select_all">全选</string>
    <string name="cancle_select_all">取消全选</string>
    <string name="is_submitting">正在提交(</string>
    <string name="result_success">成功:</string>
    <string name="result_failed">失败:</string>
    <string name="result_line">条</string>
    <string name="result_network_failed">(网络错误:</string>
    <string name="result_pic">条, 图片</string>
    <string name="result_lost">丢失:</string>
    <string name="result_other_failed">条, 其它:</string>
    <string name="myprofile_rank">等级</string>
    <string name="myprofile_rank_up_title_1">恭喜您升至</string>
    <string name="myprofile_rank_up_1">等级升至</string>
    <string name="myprofile_rank_up_2">级</string>
    <string name="myprofile_rank_up_title_2">晋升为：</string>
    <string name="myprofile_rank_xiaoduizhang">采金小白</string>
    <string name="myprofile_pic">图片</string>
    <string name="myprofile_mygrade">我的战绩</string>
    <string name="myprofile_mygrade_1">战绩</string>
    <string name="myprofile_message">消息中心</string>
    <string name="myprofile_feedback">意见反馈</string>
    <string name="myprofile_mytask">我的任务</string>
    <string name="mytask_will_getreward_tip">请耐心等待~</string>
    <string name="myprofile_mygoldmine">我的金矿</string>
    <string name="myprofile_myincome">我的收入</string>
    <string name="myprofile_collect_strategy">挖矿宝典</string>
    <string name="image_null_desc"/>
    <string name="cancel">取消</string>
    <string name="gallery_preview_fenglu">封路路段</string>
    <string name="gallery_preview_add_tag_tip">点击图中商铺的中心位置添加名称标签</string>
    <string name="rotate">旋转</string>
    <string name="not_edit">不编辑</string>
</resources>