<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/publisher_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/title_layout"
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:background="@color/title_layout_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="48dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <!-- 左边的Icon -->

                <FrameLayout
                    android:id="@+id/title_left_frame"
                    android:layout_width="48dip"
                    android:layout_height="48dip"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/title_left_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/mygold_title_back_background"
                        android:contentDescription="@null"
                        android:textColor="@drawable/expression_tab_color" />
                </FrameLayout>

                <LinearLayout
                    android:id="@+id/title_mid_text_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="48dip"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_mid_layout_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="@color/light_gray"
                        android:textSize="19sp" />
                </LinearLayout>

                <!-- 右边的Icon -->

                <LinearLayout
                    android:id="@+id/title_right_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="48dip"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_vertical|right"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/title_right_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="12dp"
                        android:gravity="center"
                        android:text="@string/task_delete"
                        android:textColor="@color/gold_color_task_name"
                        android:textSize="16sp" />
                </LinearLayout>
            </RelativeLayout>
        </FrameLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#959595"
            android:contentDescription="@null" />

        <RelativeLayout
            android:id="@+id/autoMargin"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:id="@+id/underImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAddTagTip"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/back_area_tip"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/gallery_preview_add_tag_tip"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/tvRoadEvent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/gallery_preview_fenglu"
                        android:textColor="#ffa312"
                        android:textSize="15sp"
                        android:visibility="gone" />

                    <LinearLayout
                        android:id="@+id/layoutRotateEdit"
                        android:layout_width="match_parent"
                        android:layout_height="82dp"
                        android:gravity="center_vertical"
                        android:background="@color/white"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/gallery_preview_image_rotate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:drawableTop="@drawable/xml_rotate_img"
                                android:drawablePadding="6dp"
                                android:gravity="center"
                                android:text="@string/rotate"
                                android:textColor="@color/light_gray"
                                android:textSize="13sp" />
                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <com.yq.tjimagegallery.NotEditTextView
                                android:id="@+id/viewNotEdit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:drawableTop="@drawable/xml_not_edit"
                                android:drawablePadding="6dp"
                                android:gravity="center"
                                android:text="@string/not_edit"
                                android:textColor="#999999"
                                android:textSize="13sp" />
                        </FrameLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/mTextPoiNameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:visibility="gone">

                        <LinearLayout
                            android:id="@+id/rightLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/edit_img"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/image_null_desc"
                                android:src="@drawable/edit_name_modify" />

                            <ImageView
                                android:id="@+id/edit_delete"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:contentDescription="@string/image_null_desc"
                                android:src="@drawable/edit_name_del" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp"
                            android:layout_toLeftOf="@+id/rightLayout"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:textColor="@color/light_gray"
                            android:textSize="16sp" />
                    </RelativeLayout>
                </FrameLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/gallery_preview_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/underImage">

                <com.yq.tjimagegallery.imagetag.SlideImageTagView
                    android:id="@+id/gallery_preview_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#000" />

                <LinearLayout
                    android:id="@+id/gallery_preview_image_left"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/image_null_desc"
                        android:src="@drawable/btn_left_switch_selector" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/gallery_preview_image_right"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/image_null_desc"
                        android:src="@drawable/btn_right_switch_selector" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/poi_name_edit_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/search_text_edit"
            android:layout_width="190dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="确定"/>
    </LinearLayout>


</FrameLayout>
