<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/activity_bg"
              android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/title_layout"
        android:layout_width="fill_parent"
        android:layout_height="48dip"
        android:background="@color/title_layout_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <!-- 左边的Icon -->

            <FrameLayout
                android:id="@+id/title_left_frame"
                android:layout_width="48dip"
                android:layout_height="48dip"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/title_left_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/mygold_title_back_background"
                    android:contentDescription="@null"
                    android:textColor="@drawable/expression_tab_color" />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/title_mid_text_layout"
                android:layout_width="fill_parent"
                android:layout_height="48dip"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/title_mid_layout_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dip"
                    android:drawableRight="@drawable/cate_task_mygold_selector"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- 右边的Icon -->

            <LinearLayout
                android:id="@+id/title_right_layout"
                android:layout_width="wrap_content"
                android:layout_height="48dip"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical|right"
                android:gravity="center_vertical"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/title_right_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="12dp"
                    android:text="@string/task_delete"
                    android:textColor="@color/gold_color_task_name"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>

    <ImageView
        android:id="@+id/divider_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#959595"
        android:contentDescription="@null" />

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/lay_delete_all"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:visibility="gone" >

            <!-- 下面的RelativeLayout是为了增加checkbox的响应面积，提高用户体验 -->

            <RelativeLayout
                android:id="@+id/select_all_ray"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true" >

                <ImageView
                    android:id="@+id/select_all_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/cancel"
                    android:gravity="center"
                    android:src="@drawable/circle_checkbox_bg" />

                <TextView
                    android:id="@+id/select_all_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@id/select_all_iv"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/select_all"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_delete_all"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_searchkey_selector"
                android:gravity="center"
                android:text="@string/task_delete"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <ListView
            android:id="@+id/mListView"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/lay_delete_all"
            android:cacheColorHint="#00000000"
            android:listSelector="@color/transparent" />
    </RelativeLayout>

</LinearLayout>
